--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html>
 <head>
     <title>Formulário de Cadastro</title>
+    <style>
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        
+        label {
+            width: 200px;
+        }
+        
+        input[type="submit"] {
+            margin-top: 10px;
+        }
+    </style>
     <script>
         function validarFormulario() {
             var nome = document.getElementById("nome").value;
